# average_proper_rigid_transform

./: .gitignore  CMakeLists.txt  GLM.LICENSE  LICENSE  README.md
average_affine_transform_mat/: CMakeLists.txt
average_affine_transform_mat/include/average_affine_transform_mat/: average_affine_transform_mat.h
average_affine_transform_mat/src/: example.cpp  test.cpp
average_proper_rigid_transform/: CMakeLists.txt  compiler_options.cmake
average_proper_rigid_transform/include/average_proper_rigid_transform/: average_proper_rigid_transform.h
average_proper_rigid_transform/src/: example.cpp  test.cpp
